# fast-backend-nov

./: .env  .env.local  .gitignore  README.md  alter_schema.sql  format_groq_output.py  groqtest.py  main.py  pyproject.toml  reproduce_serp.py  transcript.py  verify_deep_research.py  verify_live_serp.py  verify_remote_fix.py
job_search/: job_discovery_pipeline.py  job_matcher.py  matched_jobs_output.json  run_pipeline.py
services/: deep_research_service.py  job_service.py  resume_processor.py  supabase_client.py  transcript.py
tests/: test_job_recommendation.py  verify_groq.py
